[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cgt_bandits_22"
version = "0.0.1"
authors = [
  { name="Tomas Votroubek", email="votroto1@fel.cvut.cz" },
]
description = "Tools for the bandits tree homework"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygambit",
    "pydot"
]