[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cgt_bandits"
version = "1.0.2"
authors = [
  { name="Tomas Votroubek", email="votroto1@fel.cvut.cz" },
]
description = "Tools for the CGT bandits tree homework"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygambit == 16.1.*",
    "pydot"
]
